# flexorch-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  mcp.json  pyproject.toml  server-card.json  server.json  smithery.yaml
.github/workflows/: ci.yml
scripts/: bump_version.py
src/flexorch_mcp/: __init__.py  client.py  errors.py  server.py
src/flexorch_mcp/tools/: build.py  export.py  process.py  result.py  search.py  status.py
tests/: conftest.py  test_placeholder.py  test_tools.py
