[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexorch-mcp"
version = "0.1.0"
description = "MCP server for FlexOrch — SDK for machines"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Flexorch Technology", email = "founder@flexorch.com" }]
keywords = ["mcp", "flexorch", "document-processing", "pii", "llm", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0,<2.0",
    "flexorch-sdk>=0.1",
    "httpx>=0.27",
]

[project.scripts]
flexorch-mcp = "flexorch_mcp.server:main"

[project.urls]
Homepage = "https://flexorch.com"
Documentation = "https://docs.flexorch.com"
Repository = "https://github.com/flexorch/flexorch-mcp"
Changelog = "https://github.com/flexorch/flexorch-mcp/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/flexorch_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
